Migrated to server.js code
Migration to server.js

--- a/src/getWelcomePage/package.json
+++ b/src/getWelcomePage/package.json
@@ -1,14 +1,32 @@
 {
-  "private": true,
-  "name": "getwelcomepage",
-  "version": "0.0.1",
+  "name": "vue-event-bulletin",
+  "version": "1.0.0",
+  "description": "Demo application for the scotch.io tutorial",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "author": "Ryan Chenkie, Jason Lam",
+  "license": "MIT",
   "dependencies": {
-    "aws-sdk": "~2",
     "bootstrap": "^3.3.6",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
     "vue": "^1.0.10",
     "vue-resource": "^0.1.17"
-  }
+  },
+  "devDependencies": {
+    "body-parser": "^1.14.1",
+    "bootstrap": "^3.3.6",
+    "errorhandler": "^1.4.2",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
+    "express": "^4.13.3",
+    "vue": "^1.0.10",
+    "vue-resource": "^0.1.17"
+  } 
+   
+
 }
